<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_search_clan"
    android:layout_margin="1dp">


    <ImageView
        android:id="@+id/image_clan"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:contentDescription="@string/image_clan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_clan"/>

    <TextView
        android:id="@+id/text_name_clan"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/name_clan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_clan"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_players"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:contentDescription="@string/image_players"
        app:layout_constraintStart_toEndOf="@+id/text_name_clan"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_players"
        android:scaleType="centerInside"
        />


    <TextView
        android:id="@+id/text_total_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:gravity="center"
        android:text="@string/text_total_players"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/image_players"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.512" />

    <TextView
        android:id="@+id/text_amount_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/text_amount_players"
        app:layout_constraintEnd_toStartOf="@+id/text_total_players"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/text_total_players"/>

    <ImageView
        android:id="@+id/image_trophies"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:contentDescription="@string/image_trophies"
        app:layout_constraintStart_toEndOf="@+id/image_players"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_trophy"
        android:scaleType="centerInside"
        />

    <TextView
        android:id="@+id/text_total_trophies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/text_total_trophies"
        app:layout_constraintBottom_toBottomOf="@id/image_trophies"
        app:layout_constraintEnd_toEndOf="@id/image_trophies"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.512" />


</androidx.constraintlayout.widget.ConstraintLayout>